forgotten tag added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Failed SSH Logins</h1>
-
+    <pre id="text-content"></pre>
     <script>
         
         fetch('/tmp/stat.txt')
